Fixed browsers unnecessarily displaying scrollbars

--- a/app/subjects/subject.scss
+++ b/app/subjects/subject.scss
@@ -83,7 +83,7 @@ body main > div {
     }
     & {
 	height:100%;
-	overflow:scroll;
+	overflow:auto;
     }
 }
 
